--- a/Level.html
+++ b/Level.html
@@ -31,67 +31,9 @@
                         <span><i class="bi bi-stars"></i></span>
                         <h3>Starfall</h3>
                     </a>
-                    <a class="menu-item"  id="notifications">
-                        <span><i class="bi bi-bell"><small class="notification-count">9+</small></i></span>
+                    <a class="menu-item"  href="Notifications.html">
+                        <span><i class="bi bi-bell"><small class="notification-count">4</small></i></span>
                         <h3>Notifications</h3>
-                        <!--------------- NOTIFICATION POPUP --------------->
-                        <div class="notifications-popup">
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./images/profile-2.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keke Benjamin</b> accepted your friend request
-                                    <small class="text-muted">2 Days Ago</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./images/profile-3.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>John Doe</b> commented on your post
-                                    <small class="text-muted">1 Hour Ago</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./images/profile-4.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>Marry Oppong</b> and <b>283 Others</b> liked your post
-                                    <small class="text-muted">4 Minutes Ago</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./images/profile-5.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>Doris Y. Lartey</b> commented on a post you are tagged in
-                                    <small class="text-muted">2 Days Ago</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./images/profile-6.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>Keyley Jenner</b> commented on a post you are tagged in
-                                    <small class="text-muted">1 Hour Ago</small>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="profile-photo">
-                                    <img src="./images/profile-7.jpg">
-                                </div>
-                                <div class="notification-body">
-                                    <b>Jane Doe</b> commented on your post
-                                    <small class="text-muted">1 Hour Ago</small>
-                                </div>
-                            </div>
-                        </div>
-                        <!--------------- END NOTIFICATION POPUP --------------->
                     </a>
                     <a class="menu-item" href="Messages.html">
                         <span><i class="bi bi-chat-left"><small class="notification-count">6</small></i></span>
@@ -105,7 +47,7 @@
                         <span><i class="bi bi-rocket"></i></span>
                         <h3>Level</h3>
                     </a>
-                    <a class="menu-item">
+                    <a class="menu-item" href="Settings.html">
                         <span><i class="bi bi-gear"></i></span>
                         <h3>Settings</h3>
                     </a>
@@ -193,9 +135,7 @@
                             </div>
                         </div>
                         <div class="action">
-                            <button class="btn btn-primary">
-                                Accept
-                            </button>                            
+                            <button class="FollowButton btn btn-primary">Follow</button>
                         </div>
                     </div>
                     <div class="follow">
@@ -209,9 +149,7 @@
                             </div>
                         </div>
                         <div class="action">
-                            <button class="btn btn-primary">
-                                Accept
-                            </button>
+                            <button class="FollowButton btn btn-primary">Follow</button>
                         </div>
                     </div>
                     <div class="follow">
@@ -225,9 +163,7 @@
                             </div>
                         </div>
                         <div class="action">
-                            <button class="btn btn-primary">
-                                Accept
-                            </button>
+                            <button class="FollowButton btn btn-primary">Follow</button>
                         </div>
                     </div>
                 </div>
