--- a/Notifications.html
+++ b/Notifications.html
@@ -31,11 +31,11 @@
                         <span><i class="bi bi-stars"></i></span>
                         <h3>Starfall</h3>
                     </a>
-                    <a class="menu-item"  href="Notifications.html">
+                    <a class="menu-item active"  href="Notifications.html">
                         <span><i class="bi bi-bell"><small class="notification-count">4</small></i></span>
                         <h3>Notifications</h3>
                     </a>
-                    <a class="menu-item active" href="Messages.html">
+                    <a class="menu-item" href="Messages.html">
                         <span><i class="bi bi-chat-left"><small class="notification-count">6</small></i></span>
                         <h3>Messages</h3>
                     </a>
@@ -72,74 +72,52 @@
 
             <!----------------- MIDDLE -------------------->
             <div class="middle">
-                <!----------------- MESSAGES -------------------->
-                <div class="messages">
+                <!----------------- notificationS -------------------->
+                <div class="notifications">
                     <div class="heading">
-                        <h4>Messages</h4>
+                        <h4>Notifications</h4>
                     </div>
-                    <!------- MESSAGES 1------->
-                    <div class="message">
+                    <!------- notificationS 1------->
+                    <div class="notification">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
                         </div>
-                        <div class="message-body">
-                            <h5>Edem Quist</h5>
-                            <p class="text-muted">Just woke up bruh</p>
+                        <div class="notification-body">
+                            <h3>Mike Souza</h3>
+                            <p class="text-bold">Comment your post.</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 2------->
-                    <div class="message">
+                    <!------- notificationS 2------->
+                    <div class="notification">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
                         </div>
-                        <div class="message-body">
-                            <h5>Daniella Jackson</h5>
-                            <p class="text-bold">2 new messages</p>
+                        <div class="notification-body">
+                            <h3>Lily Jackson</h3>
+                            <p class="text-bold">Followed you.</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 3------->
-                    <div class="message">
-                        <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
-                            <div class="active"></div>
-                        </div>
-                        <div class="message-body">
-                            <h5>Chantel Msiza</h5>
-                            <p class="text-muted">lol u right</p>
-                        </div>
-                    </div>
-                    <!------- MESSAGES 4------->
-                    <div class="message">
-                        <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
-                        </div>
-                        <div class="message-body">
-                            <h5>Juliet Makarey</h5>
-                            <p class="text-muted">Birtday Tomorrow</p>
-                        </div>
-                    </div>
-                    <!------- MESSAGES 5------->
-                    <div class="message">
+                    <!------- notificationS 3------->
+                    <div class="notification">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
                             <div class="active"></div>
                         </div>
-                        <div class="message-body">
-                            <h5>Keylie Hadid</h5>
-                            <p class="text-bold">5 new messages</p>
+                        <div class="notification-body">
+                            <h3>Chantel Msiza</h3>
+                            <p class="text-bold">Stared your post</p>
                         </div>
                     </div>
-                    <!------- MESSAGES 6------->
-                    <div class="message">
+                    <!------- notificationS 4------->
+                    <div class="notification">
                         <div class="profile-photo">
                             <img src="assets/images/logo2.png">
                         </div>
-                        <div class="message-body">
-                            <h5>Benjamin Dwayne</h5>
-                            <p class="text-muted">haha got that!</p>
+                        <div class="notification-body">
+                            <h3>Juliet Makarey</h3>
+                            <p class="text-bold">Sent a post.</p>
                         </div>
-                    </div>
-                    
+                    </div>                    
                 </div>
                 <!----------------- END OF FEEDS -------------------->
             </div>
