--- a/Login.html
+++ b/Login.html
@@ -29,8 +29,8 @@
 				</a>
 				</div>
 				<div class="links">
-					<a href="#">Forget Password</a>
-					<a href="#">Signup</a>
+					<a href="ForgetPassword.html">Forget Password</a>
+					<a href="Signup.html">Signup</a>
 				</div>
 			</div>
 		</div>
