--- a/Settings.html
+++ b/Settings.html
@@ -76,13 +76,13 @@
                     <div class="settings-card">
                       <h3 class="settings-header">Account Information</h3>
                       <p class="settings-description">Update your account information like username, email, etc.</p>
-                      <a href="#" class="btn btn-primary settings-btn">Edit</a>
+                      <a href="Accountİnformation.html" class="btn btn-primary settings-btn">Edit</a>
                     </div>
                     
                     <div class="settings-card">
                       <h3 class="settings-header">Change Your Password</h3>
                       <p class="settings-description">Change your password for better security.</p>
-                      <a href="#" class="btn btn-primary settings-btn">Change Password</a>
+                      <a href="ChangeYourPassword.html" class="btn btn-primary settings-btn">Change Password</a>
                     </div>
                 </div>
             </div>
