--- a/StarFall.html
+++ b/StarFall.html
@@ -88,7 +88,7 @@
                     <img src="./images/profile-13.jpg">
                 </div>
                 <div class="info">
-                    <h3>Lana Rose</h3>
+                    <h3>@lanarose</h3>
                     <small>Dubai, 15 Minutes Ago</small>
                 </div>
             </div>
@@ -109,19 +109,19 @@
         </div>
         <div class="action-buttons">
             <div class="interaction-buttons">
-                <span><i class="bi bi-star"></i></span>
-                <span><i class="bi bi-chat"></i></span>
-                <span><i class="bi bi-stars"></i></span>
+                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
+                <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+                <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
             </div>
-        </div>
+        </div> 
         <div class="liked-by">
             <span><img src="./images/profile-10.jpg"></span>
             <span><img src="./images/profile-4.jpg"></span>
             <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>Ernest Achiever</b> and <b>2, 323 others</b></p>
+            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
         </div>
         <div class="caption">
-            <p><b>Lana Rose</b> Lorem ipsum dolor sit quisquam eius. 
+            <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
                 <span class="harsh-tag">#lifestyle</span>
             </p>
         </div>
@@ -139,7 +139,7 @@
                     <img src="./images/profile-13.jpg">
                 </div>
                 <div class="info">
-                    <h3>Lana Rose</h3>
+                    <h3>@lanarose</h3>
                     <small>Dubai, 15 Minutes Ago</small>
                 </div>
             </div>
@@ -160,19 +160,19 @@
         </div>
         <div class="action-buttons">
             <div class="interaction-buttons">
-                <span><i class="bi bi-star"></i></span>
-                <span><i class="bi bi-chat"></i></span>
-                <span><i class="bi bi-stars"></i></span>
+                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
+                <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+                <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
             </div>
-        </div>
+        </div> 
         <div class="liked-by">
             <span><img src="./images/profile-10.jpg"></span>
             <span><img src="./images/profile-4.jpg"></span>
             <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>Ernest Achiever</b> and <b>2, 323 others</b></p>
+            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
         </div>
         <div class="caption">
-            <p><b>Lana Rose</b> Lorem ipsum dolor sit quisquam eius. 
+            <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
                 <span class="harsh-tag">#lifestyle</span>
             </p>
         </div>
@@ -190,7 +190,7 @@
                     <img src="./images/profile-13.jpg">
                 </div>
                 <div class="info">
-                    <h3>Lana Rose</h3>
+                    <h3>@lanarose</h3>
                     <small>Dubai, 15 Minutes Ago</small>
                 </div>
             </div>
@@ -211,19 +211,19 @@
         </div>
         <div class="action-buttons">
             <div class="interaction-buttons">
-                <span><i class="bi bi-star"></i></span>
-                <span><i class="bi bi-chat"></i></span>
-                <span><i class="bi bi-stars"></i></span>
+                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
+                <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+                <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
             </div>
-        </div>
+        </div> 
         <div class="liked-by">
             <span><img src="./images/profile-10.jpg"></span>
             <span><img src="./images/profile-4.jpg"></span>
             <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>Ernest Achiever</b> and <b>2, 323 others</b></p>
+            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
         </div>
         <div class="caption">
-            <p><b>Lana Rose</b> Lorem ipsum dolor sit quisquam eius. 
+            <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
                 <span class="harsh-tag">#lifestyle</span>
             </p>
         </div>
@@ -248,8 +248,8 @@
                                 <img src="./images/profile-20.jpg">
                             </div>
                             <div>
-                                <h5>Hajia Bintu</h5>
-                                <p class="text-muted">8 mutual friends</p>
+                                <h5>@hajia</h5>
+                                <p class="text-muted">Novice Astroner</p>
                             </div>
                         </div>
                         <div class="action">
@@ -262,8 +262,8 @@
                                 <img src="./images/profile-18.jpg">
                             </div>
                             <div>
-                                <h5>Edelson Mandela</h5>
-                                <p class="text-muted">2 mutual friends</p>
+                                <h5>@edelson</h5>
+                                <p class="text-muted">Star Explorer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -276,8 +276,8 @@
                                 <img src="./images/profile-17.jpg">
                             </div>
                             <div>
-                                <h5>Megan Baldwin</h5>
-                                <p class="text-muted">5 mutual friends</p>
+                                <h5>@megan</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
