--- a/Messages.html
+++ b/Messages.html
@@ -83,7 +83,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="message-body">
-                            <h5>Edem Quist</h5>
+                            <h5>@edem</h5>
                             <p class="text-muted">Just woke up bruh</p>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="message-body">
-                            <h5>Daniella Jackson</h5>
+                            <h5>@daniella</h5>
                             <p class="text-bold">2 new messages</p>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>Chantel Msiza</h5>
+                            <h5>@chantel</h5>
                             <p class="text-muted">lol u right</p>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="message-body">
-                            <h5>Juliet Makarey</h5>
+                            <h5>@juliet</h5>
                             <p class="text-muted">Birtday Tomorrow</p>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
-                            <h5>Keylie Hadid</h5>
+                            <h5>@kylie</h5>
                             <p class="text-bold">5 new messages</p>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="message-body">
-                            <h5>Benjamin Dwayne</h5>
+                            <h5>@benjamin</h5>
                             <p class="text-muted">haha got that!</p>
                         </div>
                     </div>
@@ -160,8 +160,8 @@
                                 <img src="./images/profile-20.jpg">
                             </div>
                             <div>
-                                <h5>Hajia Bintu</h5>
-                                <p class="text-muted">8 mutual friends</p>
+                                <h5>@hajia</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -174,8 +174,8 @@
                                 <img src="./images/profile-18.jpg">
                             </div>
                             <div>
-                                <h5>Edelson Mandela</h5>
-                                <p class="text-muted">2 mutual friends</p>
+                                <h5>@edelson</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -188,8 +188,8 @@
                                 <img src="./images/profile-17.jpg">
                             </div>
                             <div>
-                                <h5>Megan Baldwin</h5>
-                                <p class="text-muted">5 mutual friends</p>
+                                <h5>@megan</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
