--- a/Notifications.html
+++ b/Notifications.html
@@ -83,7 +83,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="notification-body">
-                            <h3>Mike Souza</h3>
+                            <h3>@mike</h3>
                             <p class="text-bold">Comment your post.</p>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="notification-body">
-                            <h3>Lily Jackson</h3>
+                            <h3>@lily</h3>
                             <p class="text-bold">Followed you.</p>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                             <div class="active"></div>
                         </div>
                         <div class="notification-body">
-                            <h3>Chantel Msiza</h3>
+                            <h3>@chantel</h3>
                             <p class="text-bold">Stared your post</p>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <img src="assets/images/logo2.png">
                         </div>
                         <div class="notification-body">
-                            <h3>Juliet Makarey</h3>
+                            <h3>@juliet</h3>
                             <p class="text-bold">Sent a post.</p>
                         </div>
                     </div>                    
@@ -138,8 +138,8 @@
                                 <img src="./images/profile-20.jpg">
                             </div>
                             <div>
-                                <h5>Hajia Bintu</h5>
-                                <p class="text-muted">8 mutual friends</p>
+                                <h5>@hajia</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -152,8 +152,8 @@
                                 <img src="./images/profile-18.jpg">
                             </div>
                             <div>
-                                <h5>Edelson Mandela</h5>
-                                <p class="text-muted">2 mutual friends</p>
+                                <h5>@edelson</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -166,8 +166,8 @@
                                 <img src="./images/profile-17.jpg">
                             </div>
                             <div>
-                                <h5>Megan Baldwin</h5>
-                                <p class="text-muted">5 mutual friends</p>
+                                <h5>@megan</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
