--- a/Profile.html
+++ b/Profile.html
@@ -110,7 +110,7 @@
                   <div class="tabs">
                     <ul>
                       <li class="selected chosen">Posts</li>
-                      <li class ="chosen">Super Stars</li>
+                      <a href="SuperStars.html" style="color: inherit; text-decoration: none;">Super Stars</a>
                     </ul>
                   </div>                                
               
@@ -125,7 +125,7 @@
                     <img src="./images/profile-13.jpg">
                 </div>
                 <div class="info">
-                    <h3>Lana Rose</h3>
+                    <h3>@lanarose</h3>
                     <small>Dubai, 15 Minutes Ago</small>
                 </div>
             </div>
@@ -146,19 +146,19 @@
         </div>
         <div class="action-buttons">
             <div class="interaction-buttons">
-                <span><i class="bi bi-star"></i></span>
-                <span><i class="bi bi-chat"></i></span>
-                <span><i class="bi bi-stars"></i></span>
+                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
+                <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+                <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
             </div>
-        </div>
+        </div>  
         <div class="liked-by">
             <span><img src="./images/profile-10.jpg"></span>
             <span><img src="./images/profile-4.jpg"></span>
             <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>Ernest Achiever</b> and <b>2, 323 others</b></p>
+            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
         </div>
         <div class="caption">
-            <p><b>Lana Rose</b> Lorem ipsum dolor sit quisquam eius. 
+            <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
                 <span class="harsh-tag">#lifestyle</span>
             </p>
         </div>
@@ -168,6 +168,7 @@
     </div>
     <!-- END OF FEED 1 -->
 </div>
+
 <!----------------- END OF FEEDS -------------------->                
               </div>
               
@@ -188,8 +189,8 @@
                                 <img src="./images/profile-20.jpg">
                             </div>
                             <div>
-                                <h5>Hajia Bintu</h5>
-                                <p class="text-muted">8 mutual friends</p>
+                                <h5>@hajia</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -202,8 +203,8 @@
                                 <img src="./images/profile-18.jpg">
                             </div>
                             <div>
-                                <h5>Edelson Mandela</h5>
-                                <p class="text-muted">2 mutual friends</p>
+                                <h5>@edelson</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -216,8 +217,8 @@
                                 <img src="./images/profile-17.jpg">
                             </div>
                             <div>
-                                <h5>Megan Baldwin</h5>
-                                <p class="text-muted">5 mutual friends</p>
+                                <h5>@megan</h5>
+                                <p class="text-muted">Galaxy Pioneer</p>
                             </div>
                         </div>
                         <div class="action">
