--- a/ChangeYourPassword.html
+++ b/ChangeYourPassword.html
@@ -29,7 +29,9 @@
                     <input type="password" placeholder="Confirm New Password">
                 </div>
                 <div class="inputBx">
-                    <input type="submit" value="Change Password">
+                    <a href="Settings.html">
+                        <input type="submit" value="Change Password">
+                    </a>
                 </div>
                 <div class="links">
                     <a href="Home.html">Back to Home</a>
