--- a/ForgetPassword.html
+++ b/ForgetPassword.html
@@ -23,7 +23,9 @@
                     <input type="email" placeholder="Email">
                 </div>
                 <div class="inputBx">
-                    <input type="submit" value="Send Reset Link">
+                    <a href="Login.html">
+                        <input type="submit" value="Send Reset Link">
+                     </a>
                 </div>
                 <div class="links">
                     <a href="Login.html">Back to Login</a>
