--- a/Accountİnformation.html
+++ b/Accountİnformation.html
@@ -26,7 +26,9 @@
                     <input type="email" placeholder="Email" value="current_email@example.com">
                 </div>
                 <div class="inputBx">
-                    <input type="submit" value="Update Information">
+                    <a href="Settings.html">
+                        <input type="submit" value="Update Information">
+                    </a>
                 </div>
                 <div class="links">
                     <a href="Home.html">Back to Home</a>
