--- a/Messages.html
+++ b/Messages.html
@@ -77,6 +77,11 @@
                     <div class="heading">
                         <h4>Messages</h4>
                     </div>
+                     <!------- SEARCH BAR ------->
+                     <div class="search-bar">
+                        <i class="bi bi-search" style="margin-left: 1.5rem ;"></i>
+                        <input type="search" placeholder="Search messages" id="message-search">
+                    </div>
                     <!------- MESSAGES 1------->
                     <div class="message">
                         <div class="profile-photo">
@@ -147,10 +152,7 @@
 
             <!----------------- RIGHT -------------------->
             <div class="right">
-                <div class="search-bar">
-                    <i class="bi bi-search" style="color: grey;"></i>
-                    <input type="search" placeholder="Search ">
-                </div>
+
                 <!------- WWHO TO FOLLOW ------->
                 <div class="who-to-follow">
                     <h4>Who to Follow</h4>
