--- a/Signup.html
+++ b/Signup.html
@@ -31,7 +31,9 @@
                     <input type="password" placeholder="Confirm Password">
                 </div>
                 <div class="inputBx">
-                    <input type="submit" value="Sign Up">
+                    <a href="Login.html">
+                        <input type="submit" value="Sign Up">
+                    </a>
                 </div>
                 <div class="links">
                     <a href="Login.html">Already have an account? Log in</a>
