--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
                     </a>
                 </div>
                 <!----------------- END OF SIDEBAR -------------------->
-                <a href="Login.html">
+                <a href="LogOutSure.html">
                     <label class="btn btn-primary" for="log out">Log Out</label>
                     </a>
                    <!----------------- PROFILE -------------------->
