--- a/Profile.html
+++ b/Profile.html
@@ -91,6 +91,7 @@
               
                     <!-- Edit Profile Button -->
                     <button class="set-profile-btn">Edit Profile</button>
+                    <!-- Profile Picture Popup -->
                   </div>
               
                   <!-- User Info -->
