--- a/Level.html
+++ b/Level.html
@@ -54,20 +54,21 @@
                 </div>
                 <!----------------- END OF SIDEBAR -------------------->
                 <a href="Login.html">
-                <label class="btn btn-primary" for="log out">Log Out</label>
+                    <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
                <!----------------- PROFILE -------------------->
-                <a class="profile">
-                    <div class="profile-photo">
-                        <img src="./images/profile-1.jpg">
+               <a class="profile">
+                <div class="profile-photo">
+                    <img src="assets/images/profile-13.png">
+                </div>
+                <div class="profile-card">
+                    <div class="username">@username</div>
+                    <div class="text-lvl">Star Explorer</div>
+                    <div class="daily-stars" style="margin-top: 0.4rem;">
+                      Daily Stars: <i class="bi bi-star-fill"></i> 29
                     </div>
-                    <div class="handle">
-                        <h4>Nia Ridania</h4>
-                        <p class="text-muted">
-                            @niaridania
-                        </p>
-                    </div>
-                </a>
+                  </div>
+            </a>
             </div>
 
             <!----------------- MIDDLE -------------------->
@@ -121,17 +122,17 @@
                     <i class="bi bi-search" style="color: grey;"></i>
                     <input type="search" placeholder="Search ">
                 </div>
-                <!------- WWHO TO FOLLOW ------->
-                <div class="who-to-follow">
+                 <!------- WWHO TO FOLLOW ------->
+                 <div class="who-to-follow">
                     <h4>Who to Follow</h4>
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-20.jpg">
+                                <img src="assets/images/profile-13.png">
                             </div>
                             <div>
                                 <h5>@hajia</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
+                                <p class="text-muted">Novice Astroner</p>
                             </div>
                         </div>
                         <div class="action">
@@ -141,11 +142,11 @@
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-18.jpg">
+                                <img src="assets/images/profile-13.png">
                             </div>
                             <div>
                                 <h5>@edelson</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
+                                <p class="text-muted">Star Explorer</p>
                             </div>
                         </div>
                         <div class="action">
@@ -155,7 +156,7 @@
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-17.jpg">
+                                <img src="assets/images/profile-13.png">
                             </div>
                             <div>
                                 <h5>@megan</h5>
