--- a/Login.html
+++ b/Login.html
@@ -12,10 +12,7 @@
 		<div class="logo">
 			<img src="assets/images/logo.png" alt="Logo">
 		</div>
-		<div class="login-back">,
-			<div class="image">
-			<img src="assets/images/login back.png" alt="Login back">
-			</div>
+		<div class="login-back">
 			<div class="login">
 				<div class="inputBx">
 					<input type="text" placeholder="Username">
