--- a/Messages.html
+++ b/Messages.html
@@ -54,20 +54,21 @@
                 </div>
                 <!----------------- END OF SIDEBAR -------------------->
                 <a href="Login.html">
-                <label class="btn btn-primary" for="log out">Log Out</label>
+                    <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
-               <!----------------- PROFILE -------------------->
-                <a class="profile">
-                    <div class="profile-photo">
-                        <img src="./images/profile-1.jpg">
+             <!----------------- PROFILE -------------------->
+             <a class="profile">
+                <div class="profile-photo">
+                    <img src="assets/images/profile-13.png">
+                </div>
+                <div class="profile-card">
+                    <div class="username">@username</div>
+                    <div class="text-lvl">Star Explorer</div>
+                    <div class="daily-stars" style="margin-top: 0.4rem;">
+                      Daily Stars: <i class="bi bi-star-fill"></i> 29
                     </div>
-                    <div class="handle">
-                        <h4>Nia Ridania</h4>
-                        <p class="text-muted">
-                            @niaridania
-                        </p>
-                    </div>
-                </a>
+                  </div>
+            </a>
             </div>
 
             <!----------------- MIDDLE -------------------->
@@ -85,63 +86,63 @@
                     <!------- MESSAGES 1------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
+                            <img src="assets/images/profile-13.png">
                         </div>
                         <div class="message-body">
                             <h5>@edem</h5>
-                            <p class="text-muted">Just woke up bruh</p>
+                            <p class="text-muted">text</p>
                         </div>
                     </div>
                     <!------- MESSAGES 2------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
+                            <img src="assets/images/profile-13.png">
                         </div>
                         <div class="message-body">
                             <h5>@daniella</h5>
-                            <p class="text-bold">2 new messages</p>
+                            <p class="text-bold">text</p>
                         </div>
                     </div>
                     <!------- MESSAGES 3------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
+                            <img src="assets/images/profile-13.png">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
                             <h5>@chantel</h5>
-                            <p class="text-muted">lol u right</p>
+                            <p class="text-muted">text</p>
                         </div>
                     </div>
                     <!------- MESSAGES 4------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
+                            <img src="assets/images/profile-13.png">
                         </div>
                         <div class="message-body">
                             <h5>@juliet</h5>
-                            <p class="text-muted">Birtday Tomorrow</p>
+                            <p class="text-muted">text</p>
                         </div>
                     </div>
                     <!------- MESSAGES 5------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
+                            <img src="assets/images/profile-13.png">
                             <div class="active"></div>
                         </div>
                         <div class="message-body">
                             <h5>@kylie</h5>
-                            <p class="text-bold">5 new messages</p>
+                            <p class="text-bold">text</p>
                         </div>
                     </div>
                     <!------- MESSAGES 6------->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="assets/images/logo2.png">
+                            <img src="assets/images/profile-13.png">
                         </div>
                         <div class="message-body">
                             <h5>@benjamin</h5>
-                            <p class="text-muted">haha got that!</p>
+                            <p class="text-muted">text</p>
                         </div>
                     </div>
                     
@@ -152,61 +153,60 @@
 
             <!----------------- RIGHT -------------------->
             <div class="right">
-
-                <!------- WWHO TO FOLLOW ------->
-                <div class="who-to-follow">
-                    <h4>Who to Follow</h4>
-                    <div class="follow">
-                        <div class="info">
-                            <div class="profile-photo">
-                                <img src="./images/profile-20.jpg">
-                            </div>
-                            <div>
-                                <h5>@hajia</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
-                            </div>
-                        </div>
-                        <div class="action">
-                            <button class="FollowButton btn btn-primary">Follow</button>
-                        </div>
-                    </div>
-                    <div class="follow">
-                        <div class="info">
-                            <div class="profile-photo">
-                                <img src="./images/profile-18.jpg">
-                            </div>
-                            <div>
-                                <h5>@edelson</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
-                            </div>
-                        </div>
-                        <div class="action">
-                            <button class="FollowButton btn btn-primary">Follow</button>
-                        </div>
-                    </div>
-                    <div class="follow">
-                        <div class="info">
-                            <div class="profile-photo">
-                                <img src="./images/profile-17.jpg">
-                            </div>
-                            <div>
-                                <h5>@megan</h5>
-                                <p class="text-muted">Galaxy Pioneer</p>
-                            </div>
-                        </div>
-                        <div class="action">
-                            <button class="FollowButton btn btn-primary">Follow</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div>
-                    <footer>
-                        <p>&copy; 2024 MySpace.</p>
-                    </footer>
-                </div>
+  <!------- WWHO TO FOLLOW ------->
+  <div class="who-to-follow">
+    <h4>Who to Follow</h4>
+    <div class="follow">
+        <div class="info">
+            <div class="profile-photo">
+                <img src="assets/images/profile-13.png">
             </div>
-            <!----------------- END OF RIGHT -------------------->
+            <div>
+                <h5>@hajia</h5>
+                <p class="text-muted">Novice Astroner</p>
+            </div>
+        </div>
+        <div class="action">
+            <button class="FollowButton btn btn-primary">Follow</button>
+        </div>
+    </div>
+    <div class="follow">
+        <div class="info">
+            <div class="profile-photo">
+                <img src="assets/images/profile-13.png">
+            </div>
+            <div>
+                <h5>@edelson</h5>
+                <p class="text-muted">Star Explorer</p>
+            </div>
+        </div>
+        <div class="action">
+            <button class="FollowButton btn btn-primary">Follow</button>
+        </div>
+    </div>
+    <div class="follow">
+        <div class="info">
+            <div class="profile-photo">
+                <img src="assets/images/profile-13.png">
+            </div>
+            <div>
+                <h5>@megan</h5>
+                <p class="text-muted">Galaxy Pioneer</p>
+            </div>
+        </div>
+        <div class="action">
+            <button class="FollowButton btn btn-primary">Follow</button>
+        </div>
+    </div>
+</div>
+
+<div>
+    <footer>
+        <p>&copy; 2024 MySpace.</p>
+    </footer>
+</div>
+</div>
+<!----------------- END OF RIGHT -------------------->
         </div>
     </main>
     <script src = "index.js"></script>
