--- a/Settings.html
+++ b/Settings.html
@@ -54,20 +54,21 @@
                 </div>
                 <!----------------- END OF SIDEBAR -------------------->
                 <a href="Login.html">
-                <label class="btn btn-primary" for="log out">Log Out</label>
+                    <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
-               <!----------------- PROFILE -------------------->
-                <a class="profile">
-                    <div class="profile-photo">
-                        <img src="./images/profile-1.jpg">
+                <!----------------- PROFILE -------------------->
+              <a class="profile">
+                <div class="profile-photo">
+                    <img src="assets/images/profile-13.png">
+                </div>
+                <div class="profile-card">
+                    <div class="username">@username</div>
+                    <div class="text-lvl">Star Explorer</div>
+                    <div class="daily-stars" style="margin-top: 0.4rem;">
+                      Daily Stars: <i class="bi bi-star-fill"></i> 29
                     </div>
-                    <div class="handle">
-                        <h4>Nia Ridania</h4>
-                        <p class="text-muted">
-                            @niaridania
-                        </p>
-                    </div>
-                </a>
+                  </div>
+            </a>
             </div>
 
             <!----------------- MIDDLE -------------------->
