--- a/StarFall.html
+++ b/StarFall.html
@@ -55,19 +55,20 @@
                 </div>
                 <!----------------- END OF SIDEBAR -------------------->
                 <a href="Login.html">
-                <label class="btn btn-primary" for="log out">Log Out</label>
+                    <label class="btn btn-primary" style="background: linear-gradient(45deg, #9b6ef3, #fe019a);" for="log out">Log Out</label>
                 </a>
-               <!----------------- PROFILE -------------------->
+                <!----------------- PROFILE -------------------->
                 <a class="profile">
                     <div class="profile-photo">
-                        <img src="./images/profile-1.jpg">
+                        <img src="assets/images/profile-13.png">
                     </div>
-                    <div class="handle">
-                        <h4>Nia Ridania</h4>
-                        <p class="text-muted">
-                            @niaridania
-                        </p>
-                    </div>
+                    <div class="profile-card">
+                        <div class="username">@username</div>
+                        <div class="text-lvl">Star Explorer</div>
+                        <div class="daily-stars" style="margin-top: 0.4rem;">
+                          Daily Stars: <i class="bi bi-star-fill"></i> 29
+                        </div>
+                      </div>
                 </a>
             </div>
 
@@ -78,18 +79,17 @@
                     <i class="bi bi-search" style="color: grey;"></i>
                     <input type="search" placeholder="Search ">
                 </div>
-                                <!----------------- FEEDS -------------------->
+           <!----------------- FEEDS -------------------->
 <div class="feeds">
     <!-- FEED 1 -->
     <div class="feed">
         <div class="head">
             <div class="user">
                 <div class="profile-photo">
-                    <img src="./images/profile-13.jpg">
+                    <img src="assets/images/profile-13.png">
                 </div>
                 <div class="info">
-                    <h3>@lanarose</h3>
-                    <small>Dubai, 15 Minutes Ago</small>
+                    <h3>@user1</h3>
                 </div>
             </div>
             <!-- Popup Kutusu -->
@@ -105,20 +105,20 @@
             </span>
         </div>
         <div class="photo">
-            <img src="./assets/images/feed-1.jpg">
+            <img src="assets/images/feed.png">
         </div>
         <div class="action-buttons">
             <div class="interaction-buttons">
-                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
+                <span class="star-button" onclick="handleStar(this)"><i class="bi bi-star"></i><span class="star-count"> 0</span></span>
                 <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
                 <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
             </div>
-        </div> 
-        <div class="liked-by">
-            <span><img src="./images/profile-10.jpg"></span>
-            <span><img src="./images/profile-4.jpg"></span>
-            <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
+        </div>        
+        <div class="stared-by">
+            <span><img src="assets/images/profile-13.png"></span>
+            <span><img src="assets/images/profile-13.png"></span>
+            <span><img src="assets/images/profile-13.png"></span>
+            <p>Stared by <b>@Ernest</b> and <b>2, 323 others</b></p>
         </div>
         <div class="caption">
             <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
@@ -130,68 +130,64 @@
         </div>
     </div>
     <!-- END OF FEED 1 -->
-
-    <!-- FEED 2 (benzer yapıdaki diğer feedler için) -->
-    <div class="feed">
-        <div class="head">
-            <div class="user">
-                <div class="profile-photo">
-                    <img src="./images/profile-13.jpg">
+        <!-- FEED 2 -->
+        <div class="feed">
+            <div class="head">
+                <div class="user">
+                    <div class="profile-photo">
+                        <img src="assets/images/profile-13.png">
+                    </div>
+                    <div class="info">
+                        <h3>@user1</h3>
+                    </div>
                 </div>
-                <div class="info">
-                    <h3>@lanarose</h3>
-                    <small>Dubai, 15 Minutes Ago</small>
+                <!-- Popup Kutusu -->
+                <div class="popup">
+                    <ul>
+                        <li><a href="#">Block User</a></li>
+                        <li><a href="#">Report User</a></li>
+                        <li><a href="Profile.html">View Profile</a></li>
+                    </ul>
                 </div>
+                <span class="edit">
+                    <i class="bi bi-three-dots"></i>
+                </span>
             </div>
-            <!-- Popup Kutusu -->
-            <div class="popup">
-                <ul>
-                    <li><a href="#">Block User</a></li>
-                    <li><a href="#">Report User</a></li>
-                    <li><a href="Profile.html">View Profile</a></li>
-                </ul>
+            <div class="photo">
+                <img src="assets/images/feed.png">
             </div>
-            <span class="edit">
-                <i class="bi bi-three-dots"></i>
-            </span>
-        </div>
-        <div class="photo">
-            <img src="./assets/images/feed-1.jpg">
-        </div>
-        <div class="action-buttons">
-            <div class="interaction-buttons">
-                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
-                <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
-                <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
+            <div class="action-buttons">
+                <div class="interaction-buttons">
+                    <span class="star-button" onclick="handleStar(this)"><i class="bi bi-star"></i><span class="star-count"> 0</span></span>
+                    <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+                    <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
+                </div>
+            </div>        
+            <div class="stared-by">
+                <span><img src="assets/images/profile-13.png"></span>
+                <span><img src="assets/images/profile-13.png"></span>
+                <span><img src="assets/images/profile-13.png"></span>
+                <p>Stared by <b>@Ernest</b> and <b>2, 323 others</b></p>
             </div>
-        </div> 
-        <div class="liked-by">
-            <span><img src="./images/profile-10.jpg"></span>
-            <span><img src="./images/profile-4.jpg"></span>
-            <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
+            <div class="caption">
+                <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
+                    <span class="harsh-tag">#lifestyle</span>
+                </p>
+            </div>
+            <div class="comments text-muted">
+                View all 277 comments
+            </div>
         </div>
-        <div class="caption">
-            <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
-                <span class="harsh-tag">#lifestyle</span>
-            </p>
-        </div>
-        <div class="comments text-muted">
-            View all 277 comments
-        </div>
-    </div>
     <!-- END OF FEED 2 -->
-
-    <!-- FEED 3 (tekrar benzer yapıdaki feedler) -->
+        <!-- FEED 3 -->
     <div class="feed">
         <div class="head">
             <div class="user">
                 <div class="profile-photo">
-                    <img src="./images/profile-13.jpg">
+                    <img src="assets/images/profile-13.png">
                 </div>
                 <div class="info">
-                    <h3>@lanarose</h3>
-                    <small>Dubai, 15 Minutes Ago</small>
+                    <h3>@user1</h3>
                 </div>
             </div>
             <!-- Popup Kutusu -->
@@ -207,20 +203,20 @@
             </span>
         </div>
         <div class="photo">
-            <img src="./assets/images/feed-1.jpg">
+            <img src="assets/images/feed.png">
         </div>
         <div class="action-buttons">
             <div class="interaction-buttons">
-                <span class="like-button" onclick="handleLike(this)"><i class="bi bi-star"></i><span class="like-count"> 0</span></span>
+                <span class="star-button" onclick="handleStar(this)"><i class="bi bi-star"></i><span class="star-count"> 0</span></span>
                 <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
                 <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
             </div>
-        </div> 
-        <div class="liked-by">
-            <span><img src="./images/profile-10.jpg"></span>
-            <span><img src="./images/profile-4.jpg"></span>
-            <span><img src="./images/profile-15.jpg"></span>
-            <p>Liked by <b>@ernest</b> and <b>2, 323 others</b></p>
+        </div>        
+        <div class="stared-by">
+            <span><img src="assets/images/profile-13.png"></span>
+            <span><img src="assets/images/profile-13.png"></span>
+            <span><img src="assets/images/profile-13.png"></span>
+            <p>Stared by <b>@Ernest</b> and <b>2, 323 others</b></p>
         </div>
         <div class="caption">
             <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
@@ -232,6 +228,55 @@
         </div>
     </div>
     <!-- END OF FEED 3 -->
+        <!-- FEED 4 -->
+        <div class="feed">
+            <div class="head">
+                <div class="user">
+                    <div class="profile-photo">
+                        <img src="assets/images/profile-13.png">
+                    </div>
+                    <div class="info">
+                        <h3>@user1</h3>
+                    </div>
+                </div>
+                <!-- Popup Kutusu -->
+                <div class="popup">
+                    <ul>
+                        <li><a href="#">Block User</a></li>
+                        <li><a href="#">Report User</a></li>
+                        <li><a href="Profile.html">View Profile</a></li>
+                    </ul>
+                </div>
+                <span class="edit">
+                    <i class="bi bi-three-dots"></i>
+                </span>
+            </div>
+            <div class="photo">
+                <img src="assets/images/feed.png">
+            </div>
+            <div class="action-buttons">
+                <div class="interaction-buttons">
+                    <span class="star-button" onclick="handleStar(this)"><i class="bi bi-star"></i><span class="star-count"> 0</span></span>
+                    <span class="comment-button" onclick="handleComment(this)"><i class="bi bi-chat"></i><span class="comment-count"> 0</span></span>
+                    <span class="share-button" onclick="handleShare(this)"><i class="bi bi-stars"></i><span class="share-count"> 0</span></span>
+                </div>
+            </div>        
+            <div class="stared-by">
+                <span><img src="assets/images/profile-13.png"></span>
+                <span><img src="assets/images/profile-13.png"></span>
+                <span><img src="assets/images/profile-13.png"></span>
+                <p>Stared by <b>@Ernest</b> and <b>2, 323 others</b></p>
+            </div>
+            <div class="caption">
+                <p><b>@lanarose</b> Lorem ipsum dolor sit quisquam eius. 
+                    <span class="harsh-tag">#lifestyle</span>
+                </p>
+            </div>
+            <div class="comments text-muted">
+                View all 277 comments
+            </div>
+        </div>
+    <!-- END OF FEED 4 -->
 </div>
 <!----------------- END OF FEEDS -------------------->
             </div>
@@ -245,7 +290,7 @@
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-20.jpg">
+                                <img src="assets/images/profile-13.png">
                             </div>
                             <div>
                                 <h5>@hajia</h5>
@@ -259,7 +304,7 @@
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-18.jpg">
+                                <img src="assets/images/profile-13.png">
                             </div>
                             <div>
                                 <h5>@edelson</h5>
@@ -273,7 +318,7 @@
                     <div class="follow">
                         <div class="info">
                             <div class="profile-photo">
-                                <img src="./images/profile-17.jpg">
+                                <img src="assets/images/profile-13.png">
                             </div>
                             <div>
                                 <h5>@megan</h5>
